5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1649_2703.log
== TEST (2019-04-08 22:51:28) 
-- CODE:
idade=int(input("idade da pessoa:"))
if (idade=="S"):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 22:51:50) 
-- CODE:
idade=int(input("idade da pessoa:"))
if (idade=="S"):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- EXECUTION TIME:
0.2127
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:54:28) 
-- CODE:
idade=int(input("idade da pessoa:"))
if:
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- ERROR:
File "XXXX", line 2
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:56:26) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade<=18):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:56:56) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade<18):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:57:37) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade<18=="S"):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 22:57:51) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade<18=="S"):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- EXECUTION TIME:
0.140294
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:00:14) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade==18):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:00:30) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade==18):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- EXECUTION TIME:
0.178377
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:02:29) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(12<=18):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:30:33) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade <= 18):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:31:12) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade <= 18):
	print("eleitor")
else:
	print("nao_eleitor")
 
 
	
-- EXECUTION TIME:
0.133897
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:31:22) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade >= 18):
	mensagem=eleitor
	print(mensagem.lower())
else:
	mensagem=nao_eleitor
	print(mensagem.lower())
 
 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem=nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:31:33) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade >= 18):
	mensagem=eleitor
	print(mensagem.lower())
else:
	mensagem=  nao_eleitor
	print(mensagem.lower())
 
 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem=  nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:32:31) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade >= 18):
	mensagem="eleitor"
	print(mensagem.lower())
else:
	mensagem="nao_eleitor"
	print(mensagem.lower())
 
 
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:32:35) 
-- CODE:
idade=int(input("idade da pessoa:"))
if(idade >= 18):
	mensagem="eleitor"
	print(mensagem.lower())
else:
	mensagem="nao_eleitor"
	print(mensagem.lower())
 
 
	
-- EXECUTION TIME:
0.139923
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
